WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
197381
REGRESSION (
r238090
): animation on
https://www.robotodyssey.online
gets stuck; site broken
https://bugs.webkit.org/show_bug.cgi?id=197381
Summary
REGRESSION (r238090): animation on https://www.robotodyssey.online gets stuck...
Simon Fraser (smfr)
Reported
2019-04-29 13:09:43 PDT
The menu animations on
https://www.robotodyssey.online
get stuck or don't work sometimes, making the site inoperable.
Attachments
Reduction
(987 bytes, text/html)
2019-04-29 13:20 PDT
,
Simon Fraser (smfr)
no flags
Details
Patch
(4.94 KB, patch)
2019-04-29 13:39 PDT
,
Simon Fraser (smfr)
zalan
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2019-04-29 13:14:36 PDT
<
rdar://problem/50308128
>
Simon Fraser (smfr)
Comment 2
2019-04-29 13:20:43 PDT
Created
attachment 368481
[details]
Reduction
Simon Fraser (smfr)
Comment 3
2019-04-29 13:39:53 PDT
Created
attachment 368487
[details]
Patch
Simon Fraser (smfr)
Comment 4
2019-04-29 13:45:51 PDT
https://trac.webkit.org/changeset/244752/webkit
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug