REGRESSION (r238090): animation on https://www.robotodyssey.online gets stuck; site broken https://bugs.webkit.org/show_bug.cgi?id=197381 Source/WebCore:

Reviewed by Zalan Bujtas.

When -webkit-clip-path changes on a composited layer, we need to trigger a backing geometry update
to push the changes to GraphicsLayers.

Test: compositing/style-change/clip-path-change.html

* rendering/RenderLayerCompositor.cpp:
(WebCore::recompositeChangeRequiresGeometryUpdate):

LayoutTests:

<rdar://problem/50308128>

Reviewed by Zalan Bujtas.

* compositing/style-change/clip-path-change-expected.html: Added.
* compositing/style-change/clip-path-change.html: Added.

Canonical link: https://commits.webkit.org/211580@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@244752 268f45cc-cd09-0410-ab3c-d52691b4dbfc